syntax = "proto3";

package user;

option go_package = "grpc/grpc_redis/pb";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";


service UserService {
  rpc CreateUser(CreateUserRequest) returns (google.protobuf.StringValue);
  rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.StringValue);
}

message User {
  string id = 1;
  string name = 2;
  string phone = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message CreateUserRequest {
  string name = 1;
  string phone = 2;
}

message UpdateUserRequest {
  string name = 1;
  string phone = 2;
}